<resources>
    <string name="app_name">Quick-Pick Inventory</string>

    //PAGINA PRINCIPALE
    <string name="no_products_found">No products found. You can start adding products by clicking on + button</string>

    //MENU
    <string name="see_all">SEE ALL:</string>
    <string name="add">ADD:</string>

    <string name="products">Products</string>
    <string name="clients">Clients</string>
    <string name="suppliers">Suppliers</string>
    <string name="purchases">Purchases</string>

    <string name="new_product">New Product</string>
    <string name="new_client">New Client</string>
    <string name="new_supplier">New Supplier</string>
    <string name="new_purchase">New Purchase</string>
    <string name="add_product">Add Product</string>
    //MENU DELETE
    <string name="delete">Delete</string>
    //APPBAR MAIN (FAB - WIDGET)
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="cancel">Cancel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    //fragment add product
    <string name="save">Save</string>
    <string name="product_name">Product Name:</string>
    <string name="sale_price">Sale Price:</string>
    <string name="in_stock_alone">In stock:</string>
    <string name="client">Client:</string>
    <string name="supplier">Supplier:</string>
    <string name="add_client"><u>Add New Client</u></string>
    <string name="add_supplier"><u>Add New Supplier</u></string>
    <string name="quantity_in_stock">Quantity In Stock:</string>
    <string name="quantity_cannot_be_negative">Quantity cnnot be negative</string>

    <string name="quantity">Quantity:</string>
    <string name="price">Price:</string>
    <string name="hint_addSupplier_primary">If the supplier is not already in the list</string>
    <string name="hint_addSupplier_secondary">Tap to add new supplier</string>
    <string name="piu">+</string>
    <string name="meno">-</string>

    //fragment add supplier
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="e_mail">E-mail:</string>
    <string name="phone">Phone:</string>
    <string name="contact_person">Contact person:</string>

    //fragments New Purchase
    <string name="select_product">Select Product: </string>
    <string name="select_client">Select Client: </string>
    <string name="select_quantity">Select Quantity: </string>
    <string name="select_date">Select Date: </string>
    <string name="sell">Sell</string>

    //operations e validator
    <string name="enterprise_successfully_saved">Entry is successfully saved</string>
    <string name="error_updating">Error updating</string>
    <string name="error_saving">Error with saving</string>
    <string name="successfully_updated">Successfully updated</string>
    <string name="product_name_empty">Product name cannot be empty</string>
    <string name="client_name_empty">Client name cannot be empty</string>
    <string name="client_phone_empty">Phone number is mandatory</string>
    <string name="client_address_empty">Address cannot be empty</string>
    <string name="supplier_name_empty">Supplier name cannot be empty</string>
    <string name="supplier_phone_empty">Phone number is mandatory</string>
    <string name="supplier_address_empty">Address cannot be empty</string>
    <string name="no_supplier_chosen">You didn\'t chose a supplier</string>
    <string name="no_client_chosen">You didn\'t chose a client</string>
    <string name="no_product_chosen">You didn\'t chose a product</string>
    <string name="product_saved_successfully">Product saved with row id:</string>
    <string name="error_saving_product">Error with saving product</string>
    <string name="quantity_should_be_positive">Quantity should be a positive integer</string>
    <string name="price_should_be_number">Price should be a positive real number</string>
    <string name="Error_during_delete">Error during delete</string>
    <string name="Successful_deletingSupl">supplier successfully deleted</string>
    <string name="Successful_deletingProd">product successfully deleted</string>
    <string name="Successful_deletingClt">client successfully deleted</string>
    <string name="Successful_deletingPurchase">Purchase successfully deleted</string>
    <string name="AlertDialogForDelete_Question">Do you want to delete this item from the database?</string>
    <string name="AlertDialogForDelete_Confirm">Yes, delete</string>
    <string name="AlertDialogForDelete_Cancel">Cancel</string>
    <string name="purchase_date_empty">Date cannot be empty</string>
    <string name="purchase_price_empty">Price cannot be empty</string>

    //DB operations error:
    <string name="update_db_not_supported">Update is not supported for</string>
    <string name="delete_db_not_supported">Delete is not supported for</string>
    <string name="insert_db_not_supported">Insertion is not supported for</string>


    //fragment productlist
    <string name="all_products">All Products</string>
    <string name="in_stock">In stock: %1$d</string>
    <string name="edit_product">Edit Product</string>
    <string name="deleteProduct">delete</string>

    // fragments supplierList
    <string name="edit_supplier">Edit Supplier</string>
    <string name="deleteSupplier">delete</string>
    <string name="all_supplier">All Supplier</string>
    <string name="no_suppliers_found">No Suppliers found. You can start adding Suppliers by clicking "New Supplier" from the menu.</string>

    //fragments ClientList
    <string name="edit_client">Edit Client</string>
    <string name="all_clients">All Clients</string>
    <string name="no_clients_found">No Clients found. You can start adding Clients by clicking "New Client" from the menu.</string>


    //fragments PurchaseList
    <string name="edit_purchase">Edit Purchase</string>
    <string name="all_purchases">All Purchases</string>
    <string name="no_purchases_found">No Purchases found. You can start adding Purchases by clicking "New Purchases" from the menu.</string>
    <string name="deletePurchase">delete</string>



</resources>
