<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        style="@style/FieldStyle"
        android:text="@string/name"
        app:layout_constraintBaseline_toBaselineOf="@+id/editClientName"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editClientName"
        style="@style/editTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        style="@style/FieldStyle"
        android:text="@string/address"
        app:layout_constraintBaseline_toBaselineOf="@+id/editClientAddress"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editClientAddress"
        style="@style/editTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/editClientName" />

    <TextView
        android:id="@+id/textView4"
        style="@style/FieldStyle"
        android:text="@string/e_mail"
        app:layout_constraintBaseline_toBaselineOf="@+id/editClientEMail"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editClientEMail"
        style="@style/editTextStyle"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/editClientAddress" />

    <TextView
        android:id="@+id/textView5"
        style="@style/FieldStyle"
        android:text="@string/phone"
        app:layout_constraintBaseline_toBaselineOf="@+id/editClientPhone"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editClientPhone"
        style="@style/editTextStyle"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/editClientEMail" />

    <TextView
        android:id="@+id/textView6"
        style="@style/FieldStyle"
        android:text="@string/contact_person"
        app:layout_constraintBaseline_toBaselineOf="@+id/CLT_editContactPerson"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/CLT_editContactPerson"
        style="@style/editTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/editClientPhone" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="textView2,textView3,textView4,textView5,textView6"
        tools:layout_editor_absoluteX="91dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/save_client_btn"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/CLT_editContactPerson"
        android:layout_marginTop="@dimen/paddingOrMar_L"/>

</android.support.constraint.ConstraintLayout>