<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/fab_default_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_add_item"
            app:srcCompat="@drawable/ic_add_circle"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:useCompatPadding="true"
            style="@style/fabBaseStyle" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_newPurchase"
            app:backgroundTint="@color/acquisition"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_attach_money"
            app:useCompatPadding="true"
            style="@style/fabBaseStyle"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_main"
            android:padding="0dp"
            app:useCompatPadding="true"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_add_circle"
            style="@style/fabBaseStyle"/>

        <TextView
            android:id="@+id/hint_add_product"
            android:text="@string/add_product"
            app:layout_constraintEnd_toEndOf="@+id/fab_add_item"
            app:layout_constraintStart_toEndOf="@+id/fab_newPurchase"
            app:layout_constraintTop_toTopOf="@id/fab_add_item"
            style="@style/FabTextViewStyle" />

        <TextView
            android:id="@+id/hint_purchase"
            app:layout_constraintEnd_toEndOf="@+id/fab_newPurchase"
            app:layout_constraintTop_toTopOf="@+id/fab_main"
            style="@style/FabTextViewStyle"/>

        <TextView
            android:id="@+id/hint_cancel"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="@+id/fab_main"
            app:layout_constraintStart_toStartOf="@+id/fab_main"
            app:layout_constraintTop_toTopOf="@+id/fab_main"
            style="@style/FabTextViewStyle"/>

    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>